...
    
    var body: some View {
        ScrollView(){
            VStack{
                HStack{
                    Spacer()
                    Button("ZERO") {
                        finalBet = BetModel(title: "ZERO", betNumbers: [0], winMultiplier: 50)
                    }
                    .foregroundColor(.black)
                    .frame(width: 123, height: 40)
                    .cornerRadius(10)
                    .background(Color.green)
...
